--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 HIGH
+recover wallet when stuck opened by another application
 logging config for rpc requests
 support wallet.changePassword()
 moveTo(path, password) password not supported, update to be like monero-javascript
